--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Aplicacion Web para subir y publicar fotos de los lugares que has visitado a tu perfil, con la opcion de poder darle like.">
+    <meta name="description" content="Aplicacion Web para subir y publicar fotos de los lugares que has visitado a tu perfil, con la opcion de dar likes.">
     <meta name="author" content="Hakeem Ortiz">
     <meta name="keywords" content="red social, fotos, paisajes, like, viajes, aplicacion">
     <title>Around the U.S.</title>
@@ -29,13 +29,13 @@
             <img src="./images/Add_Icon.svg" alt="Icono para agregar elementos a la galería" class="profile__add-button-icon">
           </div>
           <div class="popup">
-            <div class="popup__container">
+            <form class="popup__container">
               <h2 class="popup__title">Editar Perfil</h2>
-              <input type="text" placeholder="Nombre" class="popup__input">
-              <input type="text" placeholder="Acerca de mí" class="popup__input">
+              <input type="text" placeholder="Nombre" class="popup__input popup__input_type_name">
+              <input type="text" placeholder="Acerca de mí" class="popup__input popup__input_type_description">
               <button type="submit" class="popup__submit-button">Guardar</button>
               <img src="./images/Close_Icon.svg" alt="Icono para cerrar la ventana emergente" class="popup__close-button">
-            </div>
+            </form>
           </div>
         </section>
         <section class="elements">
@@ -105,5 +105,6 @@
         <p class="footer__copyright">&#169; 2025 Around The U.S.</p>
       </footer>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
