SCRIPT updated / added initial posts load / refactorize of popup windows code / added new posts feature

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="red social, fotos, paisajes, like, viajes, aplicacion">
     <title>Around the U.S.</title>
     <link rel="stylesheet" href="pages/index.css">
-    <link rel="shortcut icon" href="#" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body class="background">
     <div class="page">
@@ -59,7 +59,7 @@
     <template id="element-template">
       <article class="element">
         <img src="" alt="" class="element__image">
-        <img src="" alt="" class="element__trash">
+        <img src="./images/Trash.svg" alt="Icono para eliminar post" class="element__trash">
         <div class="element__info">
           <p class="element__name"></p>
           <div class="element__like-group">
