SCRIPT update / added like feature / added delete feature / HTML & STYLE update to work better with the new features

--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
         <img src="./images/Trash.svg" alt="Icono para eliminar post" class="element__trash">
         <div class="element__info">
           <p class="element__name"></p>
-          <div class="element__like-group">
-            <img src="./images/Like_Icon.svg" alt="Icono para dar like" class="element__like-icon element__like-icon_not-liked">
-            <img src="./images/Liked_Icon.svg" alt="Icono donde ya tiene like" class="element__like-icon element__like-icon_liked">
-          </div>
+          <button type="button" class="element__like"></button>
         </div>
       </article>
     </template>
