javascript code optimized to use functions and event delegation

--- a/index.html
+++ b/index.html
@@ -38,20 +38,24 @@
     </div>
     <!-- VENTANAS EMERGENTES -->
     <div class="popup" id="popup-edit-info">
-      <form class="popup__container">
+      <form class="popup__form">
         <h2 class="popup__title">Editar Perfil</h2>
-        <input type="text" placeholder="Nombre" class="popup__input popup__input_type_name" minlength="3">
-        <input type="text" placeholder="Acerca de mí" class="popup__input popup__input_type_description" minlength="5">
-        <button type="submit" class="popup__submit-button">Guardar</button>
+        <input type="text" placeholder="Nombre" class="popup__input popup__input_type_name" minlength="2" maxlength="40">
+        <span class="popup__input-error name-input-error"></span>
+        <input type="text" placeholder="Acerca de mí" class="popup__input popup__input_type_description" minlength="2" maxlength="200">
+        <span class="popup__input-error description-input-error"></span>
+        <button type="submit" class="popup__button">Guardar</button>
         <img src="./images/Close_Icon.svg" alt="Icono para cerrar la ventana emergente" class="popup__close-button">
       </form>
     </div>
     <div class="popup" id="popup-add-post">
-      <form class="popup__container">
+      <form class="popup__form">
         <h2 class="popup__title">Nuevo Lugar</h2>
         <input type="text" placeholder="Título" class="popup__input popup__input_type_name" minlength="3">
+        <span class="popup__input-error title-input-error"></span>
         <input type="text" placeholder="Enlace a la imagen" class="popup__input popup__input_type_description" minlength="5">
-        <button type="submit" class="popup__submit-button">Crear</button>
+        <span class="popup__input-error link-input-error"></span>
+        <button type="submit" class="popup__button">Crear</button>
         <img src="./images/Close_Icon.svg" alt="Icono para cerrar la ventana emergente" class="popup__close-button">
       </form>
     </div>
