--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </footer>
     </div>
     <!-- VENTANAS EMERGENTES -->
-    <div class="popup" id="popup-edit-info">
+    <div class="popup" id="popup-edit-info" name="edit-info">
       <form class="popup__form">
         <h2 class="popup__title">Editar Perfil</h2>
         <label class="popup__field">
@@ -52,7 +52,7 @@
         <img src="./images/Close_Icon.svg" alt="Icono para cerrar la ventana emergente" class="popup__close-button">
       </form>
     </div>
-    <div class="popup" id="popup-add-post">
+    <div class="popup" id="popup-add-post" name="add-post">
       <form class="popup__form">
         <h2 class="popup__title">Nuevo Lugar</h2>
         <label class="popup__field">
@@ -86,7 +86,6 @@
       </article>
     </template>
     <!-- SCRIPT -->
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
