LOGIC updated / refactorized code to fully use classes / script code optimized using OOP key concepts (Encapsulation, Inheritance, Polymorphism)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="Hakeem Ortiz">
     <meta name="keywords" content="red social, fotos, paisajes, like, viajes, aplicacion">
     <title>Around the U.S.</title>
-    <link rel="stylesheet" href="pages/index.css">
+    <link rel="stylesheet" href="page/index.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body class="background">
@@ -86,6 +86,6 @@
       </article>
     </template>
     <!-- SCRIPT -->
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./page/index.js"></script>
   </body>
 </html>
