SCRIPTS updated / API conection for initial info loading and posts main requests (likes, full image, delete)

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <main class="content">
         <section class="profile">
           <div class="profile__image-box">
-            <img src="./images/Hakeem_Ortiz_profilePicture.avif" alt="Foto de perfil del usuario Hakeem Ortiz" class="profile__image">
+            <img src="" alt="Foto de perfil del usuario Hakeem Ortiz" class="profile__image">
             <div class="profile__edit-image"></div>
           </div>
           <div class="profile__info">
             <div class="profile__info-group">
-              <h1 class="profile__name">Hakeem Ortiz</h1>
+              <h1 class="profile__name"></h1>
               <img src="./images/Edit_Button.svg" alt="Icono para editar la información del perfil" class="profile__edit-button">
             </div>
-            <p class="profile__description">Aspirante a Desarrollador Web</p>
+            <p class="profile__description"></p>
           </div>
           <div class="profile__add-button">
             <img src="./images/Add_Icon.svg" alt="Icono para agregar elementos a la galería" class="profile__add-button-icon">
