--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <main class="content">
         <section class="profile">
           <div class="profile__image-box">
-            <img src="" alt="Foto de perfil del usuario Hakeem Ortiz" class="profile__image">
+            <img src="" alt="" class="profile__image">
             <div class="profile__edit-image"></div>
           </div>
           <div class="profile__info">
@@ -55,7 +55,7 @@
         <img src="./images/Close_Icon.svg" alt="Icono para cerrar la ventana emergente" class="popup__close-button">
       </form>
     </div>
-    <div class="popup" id="popup-profile-picture" name="edit-info">
+    <div class="popup" id="popup-profile-picture" name="edit-profile-picture">
       <form class="popup__form">
         <h2 class="popup__title">Cambiar Foto de Perfil</h2>
         <label class="popup__field">
